--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "fire.cloud.smart.com.smartcloudfire"
         minSdkVersion 16
         targetSdkVersion 19
-        versionCode 6
-        versionName "4.2.1"
+        versionCode 7
+        versionName "4.3.0"
         manifestPlaceholders = [
                 GETUI_APP_ID    : "WUieDSVpdYAFJRxVSTpVA3",
                 GETUI_APP_KEY   : "81wzEpKaYp7vEzcFgDEWp2",
@@ -30,6 +30,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
