--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile files('libs/hellocharts-library-1.5.8.jar')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
