--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.mob.sdk'
+
+MobSDK {
+    appKey "23a050b611f00"
+    appSecret "733ca2f8a0a3c12aa9f7fb71327cb13a"
+
+    PaySDK {}
+}
+
 
 android {
     compileSdkVersion 23
@@ -14,8 +23,8 @@ android {
         applicationId "fire.cloud.smart.com.smartcloudfire"
         minSdkVersion 16
         targetSdkVersion 19
-        versionCode 18
-        versionName "4.3.11"
+        versionCode 19
+        versionName "4.3.12"
         manifestPlaceholders = [
                 GETUI_APP_ID    : "WUieDSVpdYAFJRxVSTpVA3",
                 GETUI_APP_KEY   : "81wzEpKaYp7vEzcFgDEWp2",
