--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,17 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.mob.sdk:MobSDK:+'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    repositories {
+        maven {
+            url "http://mvn.mob.com/android"
+        }
+    }
+
 }
 allprojects {
     repositories {
