--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -226,7 +226,8 @@
             android:launchMode="singleTop" />
         <activity android:name="com.smart.cloud.fire.activity.Host.HostActivity" />
         <activity android:name="com.smart.cloud.fire.mvp.ChuangAn.ChuangAnActivity" />
-        <activity android:name="com.smart.cloud.fire.activity.PayActivity"></activity>
+        <activity android:name="com.smart.cloud.fire.activity.PayActivity" />
+        <activity android:name="com.smart.cloud.fire.activity.THDevice.OneTHDevInfoActivity"></activity>
     </application>
 
 </manifest>
