--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile files('libs/hellocharts-library-1.5.8.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'org.litepal.android:core:2.0.0'
+
 }
