--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,10 @@ android {
         ]
 
         ndk {
-            abiFilters "armeabi", "armeabi-v7a"
+            abiFilters "armeabi", "armeabi-v7a", 'x86', 'x86_64'
         }
+
+
     }
     buildTypes {
         release {
