--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fire.cloud.smart.com.smartcloudfire">
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.BAIDU_LOCATION_SERVICE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -240,6 +241,7 @@
         <activity android:name="com.smart.cloud.fire.activity.Video.VideoPreviewActivity" />
         <activity android:name="com.smart.cloud.fire.activity.AlarmMsg.AlarmMsgActivity" />
         <activity android:name="com.smart.cloud.fire.activity.AlarmMsg.DealMsgDetailActivity"></activity>
+        <activity android:name="com.smart.cloud.fire.activity.AlarmMsg.TestSafetyActivity"></activity>
     </application>
 
 </manifest>
