--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,19 +19,21 @@ android {
         }
     }
 
+
     defaultConfig {
         applicationId "fire.cloud.smart.com.smartcloudfire"
         minSdkVersion 16
         targetSdkVersion 19
         versionCode 30
         versionName "4.3.23"
+
         manifestPlaceholders = [
                 //正式
-                GETUI_APP_ID    : "WUieDSVpdYAFJRxVSTpVA3",
-                GETUI_APP_KEY   : "81wzEpKaYp7vEzcFgDEWp2",
-                GETUI_APP_SECRET: "qGM9DuOZnW51PL6hai9xB5",
-
-                //测试
+//                GETUI_APP_ID    : "WUieDSVpdYAFJRxVSTpVA3",
+//                GETUI_APP_KEY   : "81wzEpKaYp7vEzcFgDEWp2",
+//                GETUI_APP_SECRET: "qGM9DuOZnW51PL6hai9xB5",
+//
+//                //测试
 //                GETUI_APP_ID    : "pJoinMzN1q5FzNbbYJ25f3",
 //                GETUI_APP_KEY   : "R1SYtxOilj8qHZGXeMvCq4",
 //                GETUI_APP_SECRET: "itOMWaQZwg5KYU3YlEIJ48",
@@ -49,7 +51,27 @@ android {
             minifyEnabled false
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            manifestPlaceholders = [
+                    //正式
+                    GETUI_APP_ID    : "WUieDSVpdYAFJRxVSTpVA3",
+                    GETUI_APP_KEY   : "81wzEpKaYp7vEzcFgDEWp2",
+                    GETUI_APP_SECRET: "qGM9DuOZnW51PL6hai9xB5",
+            ]
         }
+        debug{
+            manifestPlaceholders = [
+                    //测试
+                GETUI_APP_ID    : "pJoinMzN1q5FzNbbYJ25f3",
+                GETUI_APP_KEY   : "R1SYtxOilj8qHZGXeMvCq4",
+                GETUI_APP_SECRET: "itOMWaQZwg5KYU3YlEIJ48",
+            ]
+        }
+    }
+}
+
+repositories {
+    maven {
+        url "http://maven.aliyun.com/nexus/content/repositories/releases"
     }
 }
 
@@ -77,5 +99,6 @@ dependencies {
     compile files('libs/hellocharts-library-1.5.8.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'org.litepal.android:core:2.0.0'
+    compile 'com.aliyun.ams:alicloud-android-hotfix:3.2.4'
 
 }
