--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,16 +24,16 @@ android {
         applicationId "fire.cloud.smart.com.smartcloudfire"
         minSdkVersion 16
         targetSdkVersion 19
-        versionCode 30
-        versionName "4.3.23"
+        versionCode 31
+        versionName "4.3.24"
 
         manifestPlaceholders = [
                 //正式
-//                GETUI_APP_ID    : "WUieDSVpdYAFJRxVSTpVA3",
-//                GETUI_APP_KEY   : "81wzEpKaYp7vEzcFgDEWp2",
-//                GETUI_APP_SECRET: "qGM9DuOZnW51PL6hai9xB5",
+                GETUI_APP_ID    : "WUieDSVpdYAFJRxVSTpVA3",
+                GETUI_APP_KEY   : "81wzEpKaYp7vEzcFgDEWp2",
+                GETUI_APP_SECRET: "qGM9DuOZnW51PL6hai9xB5",
 //
-//                //测试
+                //测试
 //                GETUI_APP_ID    : "pJoinMzN1q5FzNbbYJ25f3",
 //                GETUI_APP_KEY   : "R1SYtxOilj8qHZGXeMvCq4",
 //                GETUI_APP_SECRET: "itOMWaQZwg5KYU3YlEIJ48",
@@ -51,20 +51,20 @@ android {
             minifyEnabled false
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            manifestPlaceholders = [
-                    //正式
-                    GETUI_APP_ID    : "WUieDSVpdYAFJRxVSTpVA3",
-                    GETUI_APP_KEY   : "81wzEpKaYp7vEzcFgDEWp2",
-                    GETUI_APP_SECRET: "qGM9DuOZnW51PL6hai9xB5",
-            ]
+//            manifestPlaceholders = [
+//                    //正式
+//                    GETUI_APP_ID    : "WUieDSVpdYAFJRxVSTpVA3",
+//                    GETUI_APP_KEY   : "81wzEpKaYp7vEzcFgDEWp2",
+//                    GETUI_APP_SECRET: "qGM9DuOZnW51PL6hai9xB5",
+//            ]
         }
         debug{
-            manifestPlaceholders = [
-                    //测试
-                GETUI_APP_ID    : "pJoinMzN1q5FzNbbYJ25f3",
-                GETUI_APP_KEY   : "R1SYtxOilj8qHZGXeMvCq4",
-                GETUI_APP_SECRET: "itOMWaQZwg5KYU3YlEIJ48",
-            ]
+//            manifestPlaceholders = [
+//                    //测试
+//                GETUI_APP_ID    : "pJoinMzN1q5FzNbbYJ25f3",
+//                GETUI_APP_KEY   : "R1SYtxOilj8qHZGXeMvCq4",
+//                GETUI_APP_SECRET: "itOMWaQZwg5KYU3YlEIJ48",
+//            ]
         }
     }
 }
@@ -100,5 +100,4 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'org.litepal.android:core:2.0.0'
     compile 'com.aliyun.ams:alicloud-android-hotfix:3.2.4'
-
 }
