--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,14 +29,14 @@ android {
 
         manifestPlaceholders = [
                 //正式
-//                GETUI_APP_ID    : "WUieDSVpdYAFJRxVSTpVA3",
-//                GETUI_APP_KEY   : "81wzEpKaYp7vEzcFgDEWp2",
-//                GETUI_APP_SECRET: "qGM9DuOZnW51PL6hai9xB5",
-//
+                GETUI_APP_ID    : "WUieDSVpdYAFJRxVSTpVA3",
+                GETUI_APP_KEY   : "81wzEpKaYp7vEzcFgDEWp2",
+                GETUI_APP_SECRET: "qGM9DuOZnW51PL6hai9xB5",
+
                 //测试
-                GETUI_APP_ID    : "pJoinMzN1q5FzNbbYJ25f3",
-                GETUI_APP_KEY   : "R1SYtxOilj8qHZGXeMvCq4",
-                GETUI_APP_SECRET: "itOMWaQZwg5KYU3YlEIJ48",
+//                GETUI_APP_ID    : "pJoinMzN1q5FzNbbYJ25f3",
+//                GETUI_APP_KEY   : "R1SYtxOilj8qHZGXeMvCq4",
+//                GETUI_APP_SECRET: "itOMWaQZwg5KYU3YlEIJ48",
                 PACKAGE_NAME    : applicationId
         ]
 
