--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,4 +100,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'org.litepal.android:core:2.0.0'
 //    compile 'com.aliyun.ams:alicloud-android-hotfix:3.2.4'
+    compile 'com.android.support:cardview-v7:23.2.0'
 }
