--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,8 @@ android {
         applicationId "fire.cloud.smart.com.smartcloudfire"
         minSdkVersion 16
         targetSdkVersion 19
-        versionCode 46
-        versionName "4.3.39"
+        versionCode 47
+        versionName "4.3.40"
         multiDexEnabled true
 
         manifestPlaceholders = [
@@ -115,6 +115,7 @@ dependencies {
     implementation 'com.android.support:support-annotations:27.1.0'
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:support-v4:27.+'
     implementation 'com.blankj:utilcode:1.20.3'
     implementation project(':p2PCore')
     implementation 'com.getui:sdk:2.13.2.0'
